// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 1,
    "values": Array [
      "hello",
    ],
  },
  "value": "",
}
`;

exports[`reduce input go back input history anywhere in history 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 0,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "hello",
}
`;

exports[`reduce input go back input history at the begin of history 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 0,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "",
}
`;

exports[`reduce input go forward input history anywhere in the history 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 2,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "",
}
`;

exports[`reduce input go forward input history at the end of history 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 2,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "",
}
`;

exports[`reduce input update input value anywhere in history 1`] = `
Object {
  "dirtyValue": "",
  "history": Object {
    "index": 1,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "hello",
}
`;

exports[`reduce input update input value at the end of history 1`] = `
Object {
  "dirtyValue": "hello",
  "history": Object {
    "index": 2,
    "values": Array [
      "hello",
      "world",
    ],
  },
  "value": "hello",
}
`;
